--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,12 @@ th {
     font-weight: 700;
     text-transform: uppercase;
     font-size: 0.9em;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+th:hover {
+    background-color: #4a627a;
 }
 
 th:nth-child(2),
@@ -100,13 +106,9 @@ th:nth-child(3) {
     text-align: center;
 }
 
-tr:nth-child(even) {
-    background-color: #f9fbfd;
-}
-
-tr:hover {
-    background-color: #eaf3f9;
-    cursor: pointer;
+thead tr:hover {
+    background-color: transparent;
+    cursor: default;
 }
 
 /* addTask */
